--- a/samples/scala/shorturls/app/views/main.scala.html
+++ b/samples/scala/shorturls/app/views/main.scala.html
@@ -39,6 +39,8 @@
         <script src="@routes.Assets.at("javascripts/lodash.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/mustache.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/template.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/datatables.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-datatables.js")" type="text/javascript"></script>
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
