--- a/samples/scala/shorturls/app/views/index.scala.html
+++ b/samples/scala/shorturls/app/views/index.scala.html
@@ -2,14 +2,25 @@
 
 @main("Shorten your URLs with couchbase") {
 
-    <form class="form-inline">
-        <input type="text" class="input-xxlarge" placeholder="http://www.google.com" name="url" id="url">
-        <button type="button" id="create" class="btn btn-primary">Create short URL</button>
-    </form>
-    <div id="createdurl" class="span12"></div>
-
-    <div id="tablecontainer">
-        <table id="existingurls" class="table table-bordered table-condensed dataTable"></table>
+    <div class="row-fluid">
+        <div class="span12">
+            <form class="form-inline">
+                <input type="text" class="input-xxlarge" placeholder="http://www.google.com" name="url" id="url">
+                <button type="button" id="create" class="btn btn-primary">Create short URL</button>
+            </form>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="span12">
+            <div id="createdurl" class="span12"></div>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="span12">
+            <div id="tablecontainer">
+                <table id="existingurls" class="table table-bordered table-condensed dataTable"></table>
+            </div>
+        </div>
     </div>
 
     <script type="text/javascript">
@@ -56,7 +67,7 @@
                 $.post('@routes.ApiController.createUrl()', {url: url}, function(data) {
                     console.log(data);
                     if (data.error !== true) {
-                        $('#createdurl').html('<span class="alert alert-success span12">You can use <a href="http://mi.ni/' + data.url.id + '">http://mi.ni/' + data.url.id + '</a> to access to <a href="' + url + '">' + url + '</a></span>');
+                        $('#createdurl').html('<span class="alert alert-success span12">You can use <a href="http://mi.ni/' + data.url.id + '">http://mi.ni/' + data.url.id + '</a> to access <a href="' + url + '">' + url + '</a></span>');
                         loadUrls();
                     } else {
                         $('#createdurl').html('<span class="alert alert-danger">' + data.message + '</span>');
