Good JSON validation management

--- a/samples/scala/shorturls/app/views/index.scala.html
+++ b/samples/scala/shorturls/app/views/index.scala.html
@@ -32,7 +32,7 @@
                     _.each(data, function(item) {
                         urls.push([
                             '<a href="' + item.originalUrl + '">' + item.originalUrl + '</a>',
-                            '<a href="http://mi.ni/' + item.id + '">http://mi.ni/' + item.id + '</a>',
+                            '<a href="/r/' + item.id + '">http://mi.ni/' + item.id + '</a>',
                             '<button class="delete btn btn-danger btn-mini" data-urlid="' + item.id + '">Delete</button>'
                         ]);
                     });
