--- a/starters/couchbase-crud-starter/public/stylesheets/main.css
+++ b/starters/couchbase-crud-starter/public/stylesheets/main.css
@@ -21,3 +21,9 @@
         padding-top: 60px;
     }
 }
+
+input[type=text],input[type=number],input[type=text]:focus,input[type=number]:focus {
+    border: none;
+    outline: 0;
+}
+
